--- a/style.css
+++ b/style.css
@@ -5,4 +5,16 @@
   text-align: center;
   color: #2c3e50;
   margin-top: 60px;
+  --primary-text-color: slategray;
+}
+
+h1,
+h2,
+h3 {
+  color: var(--primary-text-color);
+  text-transform: uppercase;
+}
+
+.game-canvas.metal-detector-canvas {
+  border: 1px solid lightgray;
 }
